Remove rounded corners and fix 1px space for div.contentBorder on FireFox
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@14402 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/Web/Core/Res/Themes/NovaBlue/HTML/TabbedMultiView.css
+++ b/Remotion/Web/Core/Res/Themes/NovaBlue/HTML/TabbedMultiView.css
@@ -57,6 +57,7 @@ div.tabbedMultiViewActiveView div.contentBorder
   border-left:  solid 1px #083779;
   border-right:  solid 1px #083779;
   border-bottom:  solid 1px #083779;
+  margin-top:-1px;
 }
 
 div.tabbedMultiViewActiveView *.top, 
@@ -71,6 +72,7 @@ div.tabbedMultiViewActiveView *.bottomRight
   display: none;
 }
 
+/*
 div.tabbedMultiViewActiveView *.topLeft, 
 div.tabbedMultiViewActiveView *.bottomLeft, 
 div.tabbedMultiViewActiveView *.topRight, 
@@ -112,7 +114,7 @@ div.tabbedMultiViewActiveView *.bottomRight
   bottom: 0px;
   right: 0px;
 }
-
+*/
 /* Applied to the top section of the multi view. Height cannot be provided in percent. */
 div.tabbedMultiViewTopControls
 {
